--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="auth-modal.css">
     <script src="auth-modal.js" defer></script>
     <script src="login.js" defer></script>
-    <script src="app.js" defer></script>
     <script src="voice-message.js" defer></script>
     <script src="location-message.js" defer></script>
+    <script src="app.js" defer></script>
   
 </head>
 <body>
@@ -2024,33 +2024,49 @@
                 <button class="tb-btn" id="btn-offline" title="线下功能">
                     <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><polyline points="12 5 12 19"></polyline><polyline points="19 12 12 19 5 12"></polyline></svg>
                 </button>
-                <button class="tb-btn" id="btn-takeout" title="点外卖">
+                <button class="tb-btn" id="btn-takeout" title="交易">
                     <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
                 </button>
-                <button class="tb-btn" id="btn-transfer" title="转账">
-                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><circle cx="12" cy="12" r="8"></circle><path d="M12 7v10M10 8c-1 0-2 1-2 2s1 2 2 2h4c1 0 2 1 2 2s-1 2-2 2M14 16c1 0 2-1 2-2"></path></svg>
-                </button>
                 <button class="tb-btn" id="btn-listen" title="一起听">
-                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><path d="M5 10c0-3 2-5 4-5s3 1 3 4"></path><path d="M19 10c0-3-2-5-4-5s-3 1-3 4"></path><circle cx="6" cy="14" r="2.5"></circle><circle cx="18" cy="14" r="2.5"></circle><path d="M12 9v4M12 13l-1 5c0 1-1 2-2 2M12 13l1 5c0 1 1 2 2 2"></path></svg>
+                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#999999;stroke-width:1.5;fill:none;stroke-linecap:round;stroke-linejoin:round;"><path d="M12 1a9 9 0 0 0-9 9v3a9 9 0 0 0 18 0v-3a9 9 0 0 0-9-9z"></path><path d="M6 14v5a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-5"></path><path d="M16 14v5a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-5"></path></svg>
                 </button>
                 <button class="tb-btn" id="btn-phone" title="查手机">
                     <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><rect x="5" y="2" width="14" height="20" rx="2.5" ry="2.5"></rect><path d="M12 21h0"></path></svg>
                 </button>
-                <button class="tb-btn" id="btn-frog" title="旅行青蛙">
-                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><ellipse cx="12" cy="12" rx="8" ry="6"></ellipse><circle cx="7" cy="10" r="1.5" fill="#666"></circle><circle cx="17" cy="10" r="1.5" fill="#666"></circle><path d="M9 16c3 1 6 1 6 0"></path><path d="M4 8l-2-1M20 8l2-1"></path></svg>
-                </button>
-                <button class="tb-btn" id="btn-anonymous" title="匿名提问">
-                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><rect x="3" y="3" width="18" height="18" rx="2"></rect><line x1="9" y1="9" x2="15" y2="9"></line><line x1="9" y1="13" x2="15" y2="13"></line><line x1="9" y1="17" x2="13" y2="17"></line></svg>
+                <button class="tb-btn" id="btn-more" title="更多">
+                    <svg viewBox="0 0 24 24" style="width:20px;height:20px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
                 </button>
                 <input type="file" id="toolbar-file-input" accept="image/*" style="display:none">
             </div>
 
+            <!-- 更多功能弹出层 -->
+            <div class="toolbar-more-panel" id="toolbar-more-panel" style="display:none;">
+                <div class="more-panel-grid">
+                    <button class="more-item" id="more-diary" title="日记">
+                        <svg viewBox="0 0 24 24" style="width:24px;height:24px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><path d="M4 4h16v16H4z"></path><line x1="8" y1="2" x2="8" y2="6"></line><line x1="16" y1="2" x2="16" y2="6"></line><line x1="4" y1="10" x2="20" y2="10"></line></svg>
+                        <span>日记</span>
+                    </button>
+                    <button class="more-item" id="more-memo" title="备忘录">
+                        <svg viewBox="0 0 24 24" style="width:24px;height:24px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><line x1="10" y1="9" x2="8" y2="9"></line></svg>
+                        <span>备忘录</span>
+                    </button>
+                    <button class="more-item" id="more-frog" title="旅行青蛙">
+                        <svg viewBox="0 0 24 24" style="width:24px;height:24px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><ellipse cx="12" cy="12" rx="8" ry="6"></ellipse><circle cx="7" cy="10" r="1.5" fill="#666"></circle><circle cx="17" cy="10" r="1.5" fill="#666"></circle><path d="M9 16c3 1 6 1 6 0"></path><path d="M4 8l-2-1M20 8l2-1"></path></svg>
+                        <span>旅行青蛙</span>
+                    </button>
+                    <button class="more-item" id="more-anonymous" title="匿名提问">
+                        <svg viewBox="0 0 24 24" style="width:24px;height:24px;stroke:#666;stroke-width:1.8;fill:none;stroke-linecap:round;stroke-linejoin:round;"><circle cx="12" cy="12" r="10"></circle><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"></path><line x1="12" y1="17" x2="12.01" y2="17"></line></svg>
+                        <span>匿名提问</span>
+                    </button>
+                </div>
+            </div>
+
             <div class="chat-input-area">
-                <textarea class="chat-input" id="chat-input" placeholder="输入消息..." rows="1"></textarea>
+                <textarea class="chat-input" id="chat-input" placeholder="输入消息" rows="1"></textarea>
                 <button class="chat-send-btn" id="chat-send-btn">
                     <svg viewBox="0 0 24 24">
-                        <line x1="22" y1="2" x2="11" y2="13"></line>
-                        <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                        <path d="M22 2L11 13"></path>
+                        <path d="M22 2L15 22L11 13L2 9L22 2Z"></path>
                     </svg>
                 </button>
             </div>
