--- a/index.html
+++ b/index.html
@@ -2015,10 +2015,10 @@
             
             <div class="chat-messages" id="chat-messages"></div>
             
-            <div class="quote-message-bar-container" id="quote-message-bar-container" style="display:none;background:#f5f5f5;border-bottom:1px solid #e0e0e0;">
+            <div class="quote-message-bar-container" id="quote-message-bar-container" style="display:none;background:#f5f5f5;border-top:1px solid #e0e0e0;border-bottom:1px solid #e0e0e0;position:relative;z-index:10;">
                 <div class="quote-message-bar" id="quote-message-bar" style="padding:8px 12px;display:flex;align-items:center;gap:8px;min-height:40px;max-height:60px;overflow-y:auto;">
-                    <div class="quote-content" id="quote-content" style="flex:1;font-size:12px;color:#666;word-break:break-word;line-height:1.4;"></div>
-                    <button class="quote-cancel-btn" id="quote-cancel-btn" style="border:none;background:none;cursor:pointer;font-size:20px;color:#999;flex-shrink:0;padding:0;min-width:24px;height:24px;display:flex;align-items:center;justify-content:center;">×</button>
+                    <div class="quote-content" id="quote-content" style="flex:1;font-size:13px;color:#666;word-break:break-word;line-height:1.5;"></div>
+                    <button class="quote-cancel-btn" id="quote-cancel-btn" style="border:none;background:none;cursor:pointer;font-size:24px;color:#999;flex-shrink:0;padding:0;min-width:28px;height:28px;display:flex;align-items:center;justify-content:center;line-height:1;">×</button>
                 </div>
             </div>
 
